--- a/15_columns/index.html
+++ b/15_columns/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS3 - School of Net</title>
+    <title>CSS3 - html5</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/examples.css">
 </head>
